--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.organization=arquisoft
 sonar.host.url=https://sonarcloud.io
-sonar.projectKey=Arquisoft_lomap_0
+sonar.projectKey=Arquisoft_lomap_es5c
 
 sonar.language=ts
-sonar.projectName=lomap_0
+sonar.projectName=lomap_es5c
 sonar.projectVersion=1.0.4
 
 sonar.coverage.exclusions=**/*.test.tsx,**/*.test.ts
