--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "webapp",
+  "name": "pods-ejemplo",
   "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.2.5",
-    "@mui/material": "^5.2.5",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@inrupt/lit-generated-vocab-common": "^0.3.11",
+    "@inrupt/solid-client": "^1.25.2",
+    "@inrupt/solid-client-authn-browser": "^1.13.2",
+    "@inrupt/solid-ui-react": "^2.8.2",
+    "@inrupt/vocab-common-rdf": "^1.0.5",
+    "@inrupt/vocab-solid": "^1.0.4",
+    "@material-ui/core": "^4.12.4",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/node": "^18.11.18",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "express": "^4.18.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typescript": "^4.9.4",
-    "web-vitals": "^2.1.2"
+    "buffer": "^6.0.3",
+    "leaflet": "^1.9.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --coverage",
-    "test:e2e": "start-server-and-test 'npm --prefix ../restapi start' http://localhost:5000/api/users/list prod 3000 'cd e2e && jest'",
-    "eject": "react-scripts eject",
-    "prod": "ts-node-dev ./server.ts"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -45,17 +46,10 @@
     ]
   },
   "devDependencies": {
-    "@types/expect-puppeteer": "^4.4.7",
-    "@types/express": "^4.17.15",
-    "@types/jest": "^29.2.5",
-    "@types/puppeteer": "^5.4.4",
-    "expect-puppeteer": "^6.0.2",
-    "jest-cucumber": "^3.0.1",
-    "jest-puppeteer": "^6.0.3",
-    "puppeteer": "^13.0.1",
-    "start-server-and-test": "^1.14.0",
-    "ts-jest": "^29.0.4",
-    "ts-node-dev": "^2.0.0",
-    "react-scripts": "5.0.0"
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
