--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
-version: '3.5'
+version: "3.5"
 volumes:
-    prometheus_data: {}
-    grafana_data: {}
+  prometheus_data: {}
+  grafana_data: {}
 services:
   restapi:
     build: ./restapi
     ports:
-      - "5000:5000"
+      - "5001:5001"
   webapp:
     build: ./webapp
     ports:
       - "3000:3000"
-    depends_on: 
+    depends_on:
       - restapi
   prometheus:
     image: prom/prometheus
@@ -20,7 +20,7 @@ services:
       - prometheus_data:/prometheus
     ports:
       - "9090:9090"
-    depends_on: 
+    depends_on:
       - restapi
   grafana:
     image: grafana/grafana
@@ -34,5 +34,5 @@ services:
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
     ports:
       - "9091:9091"
-    depends_on: 
+    depends_on:
       - restapi
