Changed the restapi to MVC
PlaceController will have the implementation and it's used by the routes. Moved all the database login to the the folder persistence. Created more models in case we use them and some routes as well. Now when we create a place a random string generetes for the id.

--- a/restapi/package.json
+++ b/restapi/package.json
@@ -18,7 +18,8 @@
     "express-validator": "^6.14.2",
     "mongoose": "^7.0.0",
     "nodemon": "^2.0.21",
-    "prom-client": "^14.1.1"
+    "prom-client": "^14.1.1",
+    "randomstring": "^1.2.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
