--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,11 +16,13 @@
 		"@testing-library/user-event": "^13.5.0",
 		"buffer": "^6.0.3",
 		"leaflet": "^1.9.3",
+		"rdflib": "^2.2.30",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-leaflet": "^4.2.1",
 		"react-router-dom": "^6.8.2",
 		"react-scripts": "5.0.1",
+		"solid-auth-client": "^2.5.6",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
