--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,12 +11,14 @@
     "@inrupt/vocab-solid": "^1.0.4",
     "@material-ui/core": "^4.12.4",
     "@mobiscroll/react-lite": "^4.10.9",
+    "@rdfjs/data-model": "^2.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
     "leaflet": "^1.9.3",
+    "rdf-namespaces": "^1.10.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
