--- a/webapp/package.json
+++ b/webapp/package.json
@@ -56,7 +56,38 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "@inrupt/lit-generated-vocab-common": "^0.3.11",
+    "@inrupt/solid-client": "^1.25.2",
+    "@inrupt/solid-client-authn-browser": "^1.13.2",
+    "@inrupt/solid-ui-react": "^2.8.2",
+    "@inrupt/vocab-common-rdf": "^1.0.5",
+    "@inrupt/vocab-solid": "^1.0.4",
+    "@material-ui/core": "^4.12.4",
+    "@mobiscroll/react-lite": "^4.10.9",
+    "@rdfjs/data-model": "^2.0.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
+    "buffer": "^6.0.3",
+    "leaflet": "^1.9.3",
+    "rdf-namespaces": "^1.10.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.8.2",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "jest": {
+  
+  "transformIgnorePatterns": [
+      "node_modules/(?!(node-fetch)/)",
+      "node_modules/(?!(monaco-editor)/)",
+      "^.+\\.module.(css||sass||scss)$"
+  ]
+  }
 }
