--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,11 +16,14 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
+    "i18next": "^22.4.14",
+    "i18next-browser-languagedetector": "^7.0.1",
     "leaflet": "^1.9.3",
     "rdf-namespaces": "^1.10.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
