--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.12.13",
     "@inrupt/lit-generated-vocab-common": "^0.3.11",
     "@inrupt/solid-client": "^1.25.2",
     "@inrupt/solid-client-authn-browser": "^1.13.2",
@@ -14,6 +15,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel-jest": "^26.6.3",
     "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
     "i18next": "^22.4.14",
@@ -27,9 +29,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "@babel/plugin-transform-modules-commonjs": "^7.12.13",
-    "babel-jest": "^26.6.3"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -58,6 +58,7 @@
   "devDependencies": {
     "css-loader": "^6.7.3",
     "style-loader": "^3.3.1",
+    "text-encoding-utf-8": "^1.0.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
