--- a/.github/workflows/lomap_es5c.yml
+++ b/.github/workflows/lomap_es5c.yml
@@ -3,7 +3,14 @@ name: CI for LOMAP ES5C
 on:
   release:
     types: [published]
-
+  pull_requests:
+    branches:
+    - master
+    - develop
+  push:
+    branches:
+    - develop
+    - master
 jobs:
   unit-test-webapp:
     runs-on: ubuntu-latest
