--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.organization=arquisoft
 sonar.host.url=https://sonarcloud.io
 sonar.projectKey=Arquisoft_lomap_es5c
 
-sonar.language=ts
+sonar.language=js
 sonar.projectName=lomap_es5c
 sonar.projectVersion=1.0.4
 
