--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,6 @@ yarn-error.log*
 #documentation build does not go into master
 docs/build
 
-#mongoDB key
+#mongoDB key and firebase config
 .env
 
