--- a/.github/workflows/lomap_es5c.yml
+++ b/.github/workflows/lomap_es5c.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: "18"
       - run: npm ci
       - run: npm test --coverage --watchAll
       - name: Analyze with SonarCloud
