--- a/webapp/package.json
+++ b/webapp/package.json
@@ -31,6 +31,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "solid-panes": "^3.5.32",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
