--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
     "leaflet": "^1.9.3"
+  },
+  "devDependencies": {
+    "jest-cucumber": "^3.0.1",
+    "jest-puppeteer": "^8.0.6",
+    "puppeteer": "^19.11.1"
   }
 }
