--- a/webapp/package.json
+++ b/webapp/package.json
@@ -38,7 +38,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --coverage --transformIgnorePatterns \"node_modules/(?!@toolz/allow-react)/\" --env=jsdom",
-    "test:e2e": " start-server-and-test 'npm --prefix ../restapi start' http://localhost:5000/api/users/list prod 3000 # Equivalente a ejecutar rpm run prod y npm http://localhost:3000cd e2e && jest' ",
+    "test:e2e": "start-server-and-test prod 3000 \"cd e2e && jest --runInBand  \" ",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
