Update sonar-project.properties uncover markercard

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,11 +6,9 @@ sonar.language=js
 sonar.projectName=lomap_es5c
 sonar.projectVersion=1.0.4
 
-sonar.coverage.exclusions=**/*.test.tsx,**/*.test.ts
+sonar.coverage.exclusions=**/*.test.tsx,**/*.test.ts, **/webapp/src/components/MarkerCard.js
 sonar.sources=webapp/src/components
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=node_modules/**, ^.*//NOSONAR.*$
 sonar.typescript.lcov.reportPaths=**/coverage/lcov.info
-
-sonar.issue.ignore.multiline=^.*//NOSONAR.*$
 
