--- a/webapp/package.json
+++ b/webapp/package.json
@@ -23,6 +23,7 @@
     "i18next": "^22.4.14",
     "i18next-browser-languagedetector": "^7.0.1",
     "leaflet": "^1.9.3",
+    "node-dev": "^8.0.0",
     "rdf-namespaces": "^1.10.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -31,15 +32,18 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.0",
     "solid-panes": "^3.5.32",
+    "start-server-and-test": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --coverage --transformIgnorePatterns \"node_modules/(?!@toolz/allow-react)/\" --env=jsdom",
-    "test:e2e": " start-server-and-test 'npm --prefix ../restapi start' http://localhost:5000/api/users/list prod 3000 # Equivalente a ejecutar rpm run prod y npm http://localhost:3000cd e2e && jest' ",
-    "eject": "react-scripts eject"
+    "test:e2e": "start-server-and-test prod http://localhost:3000  \"cd e2e && jest\" ",
+    "eject": "react-scripts eject",
+    "prod": "serve -s build -l 3000"
   },
   "eslintConfig": {
     "extends": [
@@ -61,7 +65,7 @@
   },
   "devDependencies": {
     "css-loader": "^6.7.3",
-    "jest-cucumber": "^3.0.1",
+    "jest-cucumber": "^3.0.2",
     "jest-puppeteer": "^8.0.6",
     "puppeteer": "^19.11.1",
     "style-loader": "^3.3.1",
