--- a/.github/workflows/lomap_es5c.yml
+++ b/.github/workflows/lomap_es5c.yml
@@ -22,7 +22,18 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
+  e2e-tests:
+    needs: [unit-test-webapp]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - run: npm --prefix webapp install
+      - run: npm --prefix restapi install
+      - run: npm --prefix webapp run build
+      - run: npm --prefix webapp run test:e2e
   # deploy:
   #   name: Deploy over SSH
   #   runs-on: ubuntu-latest
