--- a/.github/workflows/lomap_es5c.yml
+++ b/.github/workflows/lomap_es5c.yml
@@ -8,6 +8,8 @@ jobs:
     defaults:
       run:
         working-directory: webapp
+    env:
+      CI: false
     steps:
       - uses: actions/checkout@v3
         with:
@@ -22,21 +24,3 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-  # deploy:
-  #   name: Deploy over SSH
-  #   runs-on: ubuntu-latest
-  #   needs: [docker-push-restapi,docker-push-webapp]
-  #   steps:
-  #   - name: Deploy over SSH
-  #     uses: fifsky/ssh-action@master
-  #     with:
-  #       host: ${{ secrets.DEPLOY_HOST }}
-  #       user: ${{ secrets.DEPLOY_USER }}
-  #       key: ${{ secrets.DEPLOY_KEY }}
-  #       command: |
-  #         wget https://raw.githubusercontent.com/arquisoft/lomap_es5c/master/docker-compose-deploy.yml -O docker-compose.yml
-  #         docker-compose stop
-  #         docker-compose rm -f
-  #         docker-compose pull
-  #         docker-compose up -d
