--- a/.github/workflows/lomap_es5c.yml
+++ b/.github/workflows/lomap_es5c.yml
@@ -24,3 +24,31 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  e2e-tests:
+    needs: [unit-test-webapp]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - run: npm --prefix webapp install
+      - run: npm --prefix webapp run build
+      - run: npm --prefix webapp run test:e2e
+  # deploy:
+  #   name: Deploy over SSH
+  #   runs-on: ubuntu-latest
+  #   needs: [docker-push-restapi,docker-push-webapp]
+  #   steps:
+  #   - name: Deploy over SSH
+  #     uses: fifsky/ssh-action@master
+  #     with:
+  #       host: ${{ secrets.DEPLOY_HOST }}
+  #       user: ${{ secrets.DEPLOY_USER }}
+  #       key: ${{ secrets.DEPLOY_KEY }}
+  #       command: |
+  #         wget https://raw.githubusercontent.com/arquisoft/lomap_es5c/master/docker-compose-deploy.yml -O docker-compose.yml
+  #         docker-compose stop
+  #         docker-compose rm -f
+  #         docker-compose pull
+  #         docker-compose up -d
